fix: improve contrast in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,24 +79,24 @@
 }
 
 .dark {
-  --background: oklch(0.25 0.02 285);
+  --background: oklch(0.14 0.01 285);
   --foreground: oklch(0.985 0 0);
-  --card: oklch(0.3 0.02 285 / 60%);
+  --card: oklch(0.18 0.01 285 / 60%);
   --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.3 0.02 285 / 80%);
+  --popover: oklch(0.18 0.01 285 / 85%);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.7 0.15 290);
+  --primary: oklch(0.6 0.2 290);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.35 0.02 285);
+  --secondary: oklch(0.22 0.01 285);
   --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.35 0.02 285);
-  --muted-foreground: oklch(0.8 0.01 285);
-  --accent: oklch(0.4 0.03 290 / 40%);
+  --muted: oklch(0.22 0.01 285);
+  --muted-foreground: oklch(0.7 0.01 285);
+  --accent: oklch(0.25 0.02 290 / 40%);
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 20%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.7 0.15 290);
+  --border: oklch(1 0 0 / 10%);
+  --input: oklch(1 0 0 / 8%);
+  --ring: oklch(0.6 0.2 290);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
   --chart-3: oklch(0.769 0.188 70.08);
